# SpiritIslandCoordinator

./: .gitignore  README.md
backend/: .env.example  manage.py  pyproject.toml
backend/data_migrations/: InvaderCards.py  event_cards.py  fear_card.py
backend/game/: models.py  serializers.py  urls.py  views.py
backend/game/management/commands/: scrape_fear_data.py
backend/game/migrations/: 0001_initial.py  0002_alter_game_created_by.py  0003_eventcard_fearcard_invadercard_gameevent.py  0004_eventcard_description_eventcard_image_url_and_more.py  0005_fearcard_stage_one_fearcard_stage_three_and_more.py  0006_gameevent_terror_level.py  0007_remove_fearcard_image_url_fearcard_image.py
backend/spiritisland/: asgi.py  settings.py  urls.py  wsgi.py
backend/spiritisland/game_data/: EventNames.json  FearCards.json  getting_event_names.py  getting_fear_cards.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts  router.ts
frontend/src/api/: axios.ts
frontend/src/components/: Collapsible.vue  CreateGame.vue  FearCard.vue  GameCard.vue  GameDetail.vue  GameEventList.vue  GameList.vue  Home.vue  Login.vue  Register.vue
frontend/src/stores/: auth.ts
